--- a/styles.css
+++ b/styles.css
@@ -129,3 +129,12 @@ nav ul:hover {
 
 #seven-gospel-albums @media screen and (max-width: 800px) {
 }
+
+.text-holder {
+    width: 100%;
+}
+
+.location-holder {
+    width: 100%;
+}
+
