--- a/styles.css
+++ b/styles.css
@@ -137,6 +137,37 @@ nav ul:hover {
 .location-holder {
     width: 100%;
 }
-.photogallery img { 
-    max-width: 100px;
-    height: 100px;
+
+.gallery-image {
+    width: 350px;
+    height: 350;
+}
+
+#photogallery h1 {
+    font-family: 'Arial', sans-serif;
+    font-size: 36px;
+    font-weight: bold;
+    color: #800080;
+}
+
+#photogallery h2 {
+    font-family: 'Times New Romans', sans-serif;
+    font-size: 24px;
+    font-weight: bold;
+    color: #666;
+}
+
+#photogallery p {
+    font-family: 'Georgia', sans-serif;
+    font-size: 16px;
+    color: #333;
+}
+
+#photogallery img { 
+    max-width: 300px;
+    height: 300px;
+}
+
+#photogallery body {
+    background-color: white; 
+}
